# chillbot-n

./: AI CONTEXT  CMakeLists.txt  log  mod.json  временный лог  дщп  лог
.github/workflows/: build.yml
src/: CPP.cpp  main.cpp
